--- a/resources/private/ui-components/docgen/inline-string/docgen-inline-string-template.html
+++ b/resources/private/ui-components/docgen/inline-string/docgen-inline-string-template.html
@@ -14,6 +14,8 @@
                         disable: disabled,
                         attr: { readonly: readonly,
                                 'data-test-id': path.join('.') }"></input>
+      <span data-bind="saveIndicator: indicator, label: false"
+            data-test-id="save-indicator"></span>
     </script>
   </section>
 </body>
