--- a/resources/private/ui-components/docgen/localized-string/docgen-localized-string-template.html
+++ b/resources/private/ui-components/docgen/localized-string/docgen-localized-string-template.html
@@ -14,6 +14,7 @@
                             event: events,
                             attr: { 'data-test-id': path.join('.') }">
         </span>
+        <span data-bind="saveIndicator: indicator, label: false"></span>
       </span>
     </script>
   </section>
