--- a/resources/private/ui-components/docgen/select/docgen-select-template.html
+++ b/resources/private/ui-components/docgen/select/docgen-select-template.html
@@ -16,6 +16,7 @@
                            disable: disabled,
                            css: classes">
         </select>
+        <span data-bind="saveIndicator: indicator, label: false"></span>
       </span>
     </script>
   </section>
