--- a/resources/private/ui-components/docgen/string/docgen-string-template.html
+++ b/resources/private/ui-components/docgen/string/docgen-string-template.html
@@ -21,6 +21,7 @@
           <span class="form-string-unit" data-bind="ltext: 'unit.' + params.schema.unit"></span>
           <!-- /ko -->
         </span>
+        <span data-bind="saveIndicator: indicator, label: false"></span>
       </span>
     </script>
   </section>
