--- a/resources/private/ui-components/docgen/table/docgen-table-template.html
+++ b/resources/private/ui-components/docgen/table/docgen-table-template.html
@@ -42,6 +42,7 @@
       </div>
 
       <div class="button-group" data-bind="visible: lupapisteApp.models.applicationAuthModel.ok('update-doc')">
+        <span data-bind="saveIndicator: indicator"></span>
         <span data-bind="component: { name: 'docgen-button',
                                      params: { id: groupId + '-append-button', 
                                                className: 'positive', 
@@ -56,7 +57,6 @@
                                                label: copyLabel, 
                                                clickFn: duplicateLastGroup }}">
         </span>
-      </div>
       </div>
     </script>
   </section>
