ability to move bulletin to final state

--- a/resources/private/ui-components/bulletin/publish-bulletin/publish-application-template.html
+++ b/resources/private/ui-components/bulletin/publish-bulletin/publish-application-template.html
@@ -14,6 +14,9 @@
       <!-- ko if: canMoveToVerdictGiven -->
       <div data-bind="component: { name: 'move-to-verdict-given', params: { appId: appId, canPublish: canMoveToVerdictGiven, bulletinState: bulletinState } }"></div>
       <!-- /ko -->
+      <!-- ko if: canMoveToFinal -->
+      <div data-bind="component: { name: 'move-to-final', params: { appId: appId, canPublish: canMoveToFinal, bulletinState: bulletinState } }"></div>
+      <!-- /ko -->
     </script>
   </section>
 </body>
