--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1393,6 +1393,16 @@
                                            visible: $root.authorization.ok('create-task'),
                                            enable: $root.authorization.ok('create-task')"></button>
                     </div>
+                    <!-- ko if: $root.hasConstructionTimeDocs -->
+                    <div id="construction-time-documents">
+                      <p data-bind="lhtml: 'required.field.desc'"></p>
+                      <div class="application_section">
+                        <div id="constructionTimeDocgen" class="docgen-content">
+                          <!-- This is where generated document will be placed. -->
+                        </div>
+                      </div>
+                    </div>
+                    <!-- /ko -->
                     <!-- /ko -->
                 </div>
             </div>
