More unambigious placeholder for company id.

--- a/resources/private/mypage/mypage.html
+++ b/resources/private/mypage/mypage.html
@@ -53,7 +53,7 @@
                                           params: {value: companyId,
                                                    id: 'architect.company.id',
                                                    lLabel: 'userinfo.architect.company.id',
-                                                   placeholder: '000009-1'}}"></div>
+                                                   placeholder: loc( 'mypage.ytunnus.placeholder')}}"></div>
             </div>
             <!-- /ko -->
 
