--- a/resources/private/ui-components/docgen/table/docgen-table-template.html
+++ b/resources/private/ui-components/docgen/table/docgen-table-template.html
@@ -33,7 +33,7 @@
 
               <td class="action-column">
                 <i class="lupicon-remove primary" data-bind="click: $parent.removeGroup,
-                                                             visible: lupapisteApp.models.applicationAuthModel.ok($component.service.getRemoveCommand($component.documentId))"></i>
+                                                             visible: $component.groupsRemovable"></i>
               </td>
 
             </tr>
@@ -41,7 +41,7 @@
         </table>
       </div>
 
-      <div class="button-group" data-bind="visible: lupapisteApp.models.applicationAuthModel.ok(service.getUpdateCommand(documentId))">
+      <div class="button-group" data-bind="visible: updatable">
         <span data-bind="saveIndicator: indicator"></span>
         <span data-bind="component: { name: 'docgen-button',
                                      params: { id: groupId + '-append-button', 
