--- a/resources/private/bulletins/application-bulletin/bulletin-comment/bulletin-comment-box/bulletin-comment-box-template.html
+++ b/resources/private/bulletins/application-bulletin/bulletin-comment/bulletin-comment-box/bulletin-comment-box-template.html
@@ -3,7 +3,8 @@
 <body>
   <section class="page container">
     <script type="text/x-jquery-tmpl" id="bulletin-comment-box-template">
-      <form data-bind="submit: sendComment"
+      <form id="bulletin-comment-form"
+            data-bind="submit: sendComment"
             data-test-id="bulletin-comment-box-form"
             class="form-grid form-grid--no-border">
 
@@ -134,7 +135,7 @@
         </div>
         <div class="row">
           <label data-bind="ltext: 'bulletin.comment.selectedAttachments'"></label>
-          <input class="hidden" type="file" data-bind="event: {change: fileChanged}"/>
+          <input class="hidden" type="file" name="files[]" data-bind="event: {change: fileChanged}"/>
           <input class="hidden" type="text" name="bulletin-id" data-bind="value: bulletinId"/>
           <input class="hidden" type="text" name="bulletin-version-id" data-bind="value: versionId"/>
           <!-- ko if: attachments().length > 0 -->
@@ -142,11 +143,6 @@
             <li>
               <span data-bind="text: $data.name"></span>
               <span data-bind="size: $data.size"></span>
-              <span>
-                <a href="#" data-bind="click: $component.removeAttachment">
-                  <span data-bind="ltext: 'remove'"></span>
-                </a>
-              </span>
             </li>
           </ul>
           <!-- /ko -->
