--- a/resources/private/bulletins/application-bulletin/application-bulletin-template.html
+++ b/resources/private/bulletins/application-bulletin/application-bulletin-template.html
@@ -53,7 +53,10 @@
                       data-bind=""
                       data-test-id="comment-bulletin">
                   <i class="lupicon-comment"></i>
-                  <span data-bind="ltext: 'bulletin.comment'"></span>
+                  <!-- ko if: !authenticated() -->
+                  <span data-bind="ltext: 'bulletin.actions.comment',
+                                   click: clickAuthenticationButton"></span>
+                  <!-- /ko -->
               </button>
               <button class="function julkipano"
                       data-bind=""
