--- a/resources/private/bulletins/application-bulletin/bulletin-comment/bulletin-comment-template.html
+++ b/resources/private/bulletins/application-bulletin/bulletin-comment/bulletin-comment-template.html
@@ -3,7 +3,7 @@
 <body>
   <section class="page container">
     <script type="text/x-jquery-tmpl" id="bulletin-comment-template">
-      <div class="container bulletin-comment">
+      <div id="bulletin-comment" class="container bulletin-comment">
         <h5 data-bind="ltext: 'bulletin.comment.title'"></h5>
         <span data-bind="component: { name: 'help-toggle',
                                       params: { lhtml: 'help.bulletin.comment' }}"></span>
