updating repeating group for document data service

--- a/resources/private/ui-components/docgen/repeating-group/docgen-repeating-group-template.html
+++ b/resources/private/ui-components/docgen/repeating-group/docgen-repeating-group-template.html
@@ -26,8 +26,11 @@
           <!-- /ko -->
 
           <div data-bind="component: { name: 'docgen-group',
-                                       index: index,
-                                       params: $data }">
+                                       params: { schema: $data.schema,
+                                                 path: $component.path.concat(index),
+                                                 i18npath: $component.i18npath,
+                                                 applicationId: $component.applicationId,
+                                                 documentId: $component.documentId }}">
           </div>
         </div>
       </div>
