--- a/resources/private/ui-components/docgen/group/docgen-group-template.html
+++ b/resources/private/ui-components/docgen/group/docgen-group-template.html
@@ -17,7 +17,7 @@
                 data-bind="component: { name: uicomponent,
                                         params: { schema: $data,
                                                   path: path,
-                                                  model: model,
+                                                  i18npath: i18npath,
                                                   applicationId: applicationId,
                                                   documentId: documentId }}">
           </span>
