--- a/resources/private/ui-components/docgen/repeating-group/docgen-repeating-group-template.html
+++ b/resources/private/ui-components/docgen/repeating-group/docgen-repeating-group-template.html
@@ -27,7 +27,7 @@
 
           <div data-bind="component: { name: 'docgen-group',
                                        params: { schema: $data.schema,
-                                                 path: $component.path.concat(index),
+                                                 path: $data.path,
                                                  i18npath: $component.i18npath,
                                                  applicationId: $component.applicationId,
                                                  documentId: $component.documentId }}">
