--- a/resources/private/ui-components/docgen/group/docgen-group-template.html
+++ b/resources/private/ui-components/docgen/group/docgen-group-template.html
@@ -15,11 +15,11 @@
         <div data-bind="foreach: subSchemas">
           <span class="form-entry"
                 data-bind="component: { name: uicomponent,
-                                        params: { schema: $data,
+                                        params: { schema: schema,
                                                   path: path,
                                                   i18npath: i18npath,
-                                                  applicationId: applicationId,
-                                                  documentId: documentId }}">
+                                                  applicationId: $component.applicationId,
+                                                  documentId: $component.documentId }}">
           </span>
         </div>
       </div>
