--- a/resources/private/ui-components/docgen/select/docgen-select-template.html
+++ b/resources/private/ui-components/docgen/select/docgen-select-template.html
@@ -7,7 +7,7 @@
         <message-panel params="class: 'errorPanel', show: showMessagePanel, message: errorMessage"></message-panel>
         <message-panel params="class: 'form-help', show: showMessagePanel, message: helpMessage"></message-panel>
         <label data-bind="visible: label, ltext: label"></label>
-        <select class="form-input combobox" data-bind="options: params.schema.body,
+        <select class="form-input combobox" data-bind="options: schema.body,
                            optionsText: optionsTextFn,
                            optionsValue: 'name',
                            value: value,
