unifying docgen group component types

--- a/resources/private/ui-components/property-group/property-group-template.html
+++ b/resources/private/ui-components/property-group/property-group-template.html
@@ -30,6 +30,8 @@
                data-bind="component: { name: uicomponent,
                                        params: { schema: $data,
                                                  path: path,
+                                                 applicationId: applicationId,
+                                                 documentId: documentId,
                                                  isDisabled: $component.isDisabled,
                                                  authModel: $component.authModel }}"></div>
         </span>
