--- a/resources/private/ui-components/docgen/group/docgen-group-template.html
+++ b/resources/private/ui-components/docgen/group/docgen-group-template.html
@@ -18,8 +18,8 @@
                                         params: { schema: schema,
                                                   path: path,
                                                   i18npath: i18npath,
-                                                  applicationId: $component.applicationId,
-                                                  documentId: $component.documentId }}">
+                                                  applicationId: applicationId,
+                                                  documentId: documentId }}">
           </span>
         </div>
       </div>
