--- a/resources/private/bulletins/application-bulletin/application-bulletin-template.html
+++ b/resources/private/bulletins/application-bulletin/application-bulletin-template.html
@@ -85,7 +85,7 @@
         </div>
       </div>
       <div class="container">
-        <div class="bulletin-tab-content" data-bind="template: { name: 'application-bulletin-' + selectedTab() + '-tab-template'}"></div>
+        <div class="bulletin-tab-content" data-bind="component: { name: 'bulletin-' + selectedTab() + '-tab', params: tabComponentParams}"></div>
 
         <div data-bind="visible: selectedTab() === 'info'" id="bulletinDocgen" class="docgen-content">
             <!-- This is where the generated documents will be placed. -->
