toggle construction time doc visibility instead of removing from dom

--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1393,8 +1393,9 @@
                                            visible: $root.authorization.ok('create-task'),
                                            enable: $root.authorization.ok('create-task')"></button>
                     </div>
+                    <!-- /ko -->
                     <!-- ko if: $root.hasConstructionTimeDocs -->
-                    <div id="construction-time-documents">
+                    <div id="construction-time-documents" data-bind="visible: selectedTabName() === 'tasks' && $root.authorization.ok('tasks-tab-visible')">
                       <p data-bind="lhtml: 'required.field.desc'"></p>
                       <div class="application_section">
                         <div id="constructionTimeDocgen" class="docgen-content">
@@ -1402,7 +1403,6 @@
                         </div>
                       </div>
                     </div>
-                    <!-- /ko -->
                     <!-- /ko -->
                 </div>
             </div>
