use label instead of button so we can click the hidden file input in IE9

--- a/resources/private/bulletins/application-bulletin/bulletin-comment/bulletin-comment-box/bulletin-comment-box-template.html
+++ b/resources/private/bulletins/application-bulletin/bulletin-comment/bulletin-comment-box/bulletin-comment-box-template.html
@@ -155,11 +155,12 @@
           <!-- /ko -->
         </div>
         <div class="row">
-          <button class="bulletin" data-bind="click: addAttachment, css: {waiting: filePending}">
+          <!-- TODO get for attr value from service -->
+          <label class="btn bulletin" for="fileupload-input" data-bind="css: {waiting: filePending}">
             <i class="lupicon-paperclip"></i>
             <i class="wait spin lupicon-refresh"></i>
             <span data-bind="ltext: 'bulletin.comment.addAttachment'"></span>
-          </button>
+          </label>
         </div>
         <div class="row">
           <button type="submit" class="positive" data-bind="disable: isDisabled,
