--- a/resources/private/bulletins/application-bulletin/bulletin-comment/bulletin-comment-template.html
+++ b/resources/private/bulletins/application-bulletin/bulletin-comment/bulletin-comment-template.html
@@ -14,7 +14,8 @@
         <div data-bind="component: { name: 'bulletin-comment-box',
                                      params: { bulletinId: bulletin.bulletinId,
                                                versionId: versionId,
-                                               userInfo: userInfo } }"></div>
+                                               userInfo: userInfo,
+                                               fileInputId: fileuploadService.fileInputId } }"></div>
       </div>
     </script>
   </section>
