--- a/resources/private/bulletins/bulletins.html
+++ b/resources/private/bulletins/bulletins.html
@@ -3,7 +3,8 @@
 <body>
   <section class="page" id="bulletins" data-test-id="bulletins-app">
     <div data-bind="component: {name: 'bulletins', params: {bulletinService: bulletinService,
-                                                            vetumaService: vetumaService}}"></div>
+                                                            vetumaService: vetumaService,
+                                                            fileuploadService: fileuploadService}}"></div>
   </section>
 </body>
 </html>
