do not show remove icon for repeating with readonly value

--- a/resources/private/ui-components/docgen/construction-waste-report/construction-waste-report-template.html
+++ b/resources/private/ui-components/docgen/construction-waste-report/construction-waste-report-template.html
@@ -32,7 +32,7 @@
 
               <td class="action-column">
                 <i class="lupicon-remove primary" data-bind="click: $parent.removeGroup,
-                                                             visible: $component.groupsRemovable()"></i>
+                                                             visible: $component.groupsRemovable(schema)"></i>
               </td>
 
             </tr>
