--- a/resources/private/ui-components/docgen/repeating-group/docgen-repeating-group-template.html
+++ b/resources/private/ui-components/docgen/repeating-group/docgen-repeating-group-template.html
@@ -15,7 +15,7 @@
                                                    label: 'remove',
                                                    index: index,
                                                    clickFn: $parent.removeGroup }},
-                             visible: $component.groupsRemovable()">
+                             visible: $component.groupsRemovable($data.schema)">
             </span>
           </div>
 
