change to ltext when no attachments are available

--- a/resources/private/bulletins/application-bulletin/tabs/attachments/bulletin-attachments-tab-template.html
+++ b/resources/private/bulletins/application-bulletin/tabs/attachments/bulletin-attachments-tab-template.html
@@ -11,7 +11,7 @@
                                    data: attachments}"></div>
         <!-- /ko -->
         <!-- ko if: attachments.length == 0 -->
-        <h1>Ei liitteitä</h1>
+        <i data-bind="ltext: 'application.attachmentsEmpty'"></i>
         <!-- /ko -->
     </script>
   </section>
