robot test to ensure attachments are visible in bulletin page

--- a/resources/private/bulletins/application-bulletin/tabs/attachments/bulletin-attachments-tab-template.html
+++ b/resources/private/bulletins/application-bulletin/tabs/attachments/bulletin-attachments-tab-template.html
@@ -11,7 +11,7 @@
                                    data: attachments}"></div>
         <!-- /ko -->
         <!-- ko if: attachments.length == 0 -->
-        <i data-bind="ltext: 'application.attachmentsEmpty'"></i>
+        <i data-bind="ltext: 'application.attachmentsEmpty'" data-test-id="bulletin-attachments-empty"></i>
         <!-- /ko -->
     </script>
   </section>
