check tabs in bulletin page robot

--- a/resources/private/bulletins/application-bulletin/application-bulletin-template.html
+++ b/resources/private/bulletins/application-bulletin/application-bulletin-template.html
@@ -60,7 +60,7 @@
 
           <!-- Tabs: -->
           <div class="tabs-container">
-            <ul class="tabs" id="">
+            <ul class="tabs" id="bulletin-tabs">
               <li data-bind="css: {'active': selectedTab() === 'info'}">
                   <a data-bind="click: _.partial(openTab, 'info')" href="#" class="link-btn-julkipano" data-test-id="bulletin-open-info-tab">
                       <span data-bind="ltext: 'application.tabInfo'"></span> </a></li>
