--- a/resources/private/bulletins/application-bulletin/bulletin-comment/bulletin-comment-template.html
+++ b/resources/private/bulletins/application-bulletin/bulletin-comment/bulletin-comment-template.html
@@ -9,7 +9,7 @@
                                       params: { lhtml: 'help.bulletin.comment' }}"></span>
         <p>
           <span data-bind="ltext: 'bulletin.comment.endDate'"></span>
-          <span data-bind="dateTimeString: bulletin.proclamationEndsAt"></span>
+          <span data-bind="dateString: bulletin.proclamationEndsAt"></span>
         </p>
         <div data-bind="component: { name: 'bulletin-comment-box',
                                      params: { bulletinId: bulletin.bulletinId,
