disable checkbox and select when field is readonly

--- a/resources/private/ui-components/docgen/checkbox/docgen-checkbox-template.html
+++ b/resources/private/ui-components/docgen/checkbox/docgen-checkbox-template.html
@@ -7,7 +7,8 @@
         <message-panel params="class: 'errorPanel', show: showMessagePanel, message: errorMessage"></message-panel>
         <message-panel params="class: 'form-help', show: showMessagePanel, message: helpMessage"></message-panel>
         <label data-bind="visible: label, ltext: label"></label>
-        <input type="checkbox" data-bind="checked: value, disable: disabled" />
+        <input type="checkbox" data-bind="checked: value, 
+                                          disable: disabled() || readonly()" />
         <span data-bind="saveIndicator: indicator, label: false"></span>
       </span>
     </script>
