--- a/resources/private/ui-components/docgen/select/docgen-select-template.html
+++ b/resources/private/ui-components/docgen/select/docgen-select-template.html
@@ -13,7 +13,7 @@
                            value: value,
                            valueAllowUnset: valueAllowUnset,
                            optionsCaption: optionsCaption,
-                           disable: disabled,
+                           disable: disabled() || readonly(),
                            css: classes">
         </select>
         <span data-bind="saveIndicator: indicator, label: false"></span>
