--- a/resources/private/ui-components/bulletin/publish-bulletin/move-to-proclaimed-template.html
+++ b/resources/private/ui-components/bulletin/publish-bulletin/move-to-proclaimed-template.html
@@ -30,17 +30,7 @@
       </div>
     </div>
   </div>
-
-  <button data-bind="click:  publishApplicationBulletin,
-                     enable: canPublish() && isValid(),
-                     attr:   {'title': loc('tooltip.publishBulletin')},
-                     css:    {waiting: pending}"
-          data-test-id="publish-bulletin"
-          class="positive">
-    <i class="lupicon-circle-arrow-right"></i>
-    <i class="wait spin lupicon-refresh"></i>
-    <span data-bind="ltext: 'bulletin.publish'"></span>
-  </button>
+  <div data-bind="template: 'publish-button-template'"></div>
   <!-- /ko -->
   <!-- ko if: alreadyProclaimed() && !proclaimAgain() -->
   <button class="primary" data-bind="toggleClick: proclaimAgain">
